--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -8,7 +8,8 @@
 }
 
 h1 {
-  font-family: var(--font-lato);
+  font-family: var(--font-montserrat);
+  font-weight: 700;
   font-size: 3rem;
 }
 
@@ -51,5 +52,5 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: var(--font-merriweather-sans);
+  font-family: var(--font-lato);
 }
