--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -8,7 +8,7 @@ header {
   justify-content: space-between;
 }
 
-header > h2 {
+header h2 {
   min-width: 30%;
   height: 100%;
   display: flex;
@@ -20,7 +20,7 @@ header > h2 {
   justify-content: center;
 }
 
-header > h2 > span {
+header h2 > span {
   padding-right: 0.5rem;
 }
 
@@ -41,9 +41,9 @@ header > nav ul {
 }
 
 header > nav ul > li  {
-    font-size: .8rem;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: -.06rem;
-    word-spacing: .1rem;
+  font-size: .8rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: -.06rem;
+  word-spacing: .1rem;
 }
