--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,10 +1,64 @@
 main {
   flex: 1;
 }
+
 .hero {
   width: 100%;
   min-height: 200px;
-  height: 35vh;
+  /* height: 60vh; */
+  padding: 0 3rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: .5fr 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+.hero > .hero-title {
+  grid-area: 1/1/2/2;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.hero > .hero-title > h1,h2,h3 {
+  width: fit-content;
+}
+
+.hero > .hero-title > .title {
+  position: relative;
+  top: 20%;
+  left: 30%;
+}
+
+.hero > .hero-title > h2 {
+  position: relative;
+  top: 10%;
+  left: 4%;
+  font-family: var(--font-lato);
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.hero > .hero-title > h3 {
+  position: relative;
+  top: 28%;
+  left: 30%;
+  font-family: var(--font-lato);
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.hero>.hero-description {
+  grid-area: 2/1/3/2;
+  width: 90%;
+  justify-self: self-start;
+  position: relative;
+  left:4%;
+}
+
+.hero>.hero-image {
+  grid-area: 1/2/3/3;
 }
 
 .review-section {
@@ -13,6 +67,7 @@ main {
   display: flex;
   align-items: center;
 }
+
 .review-section > .review-container {
   width: 100%;
   margin: 20px 0;
@@ -24,6 +79,7 @@ main {
   overflow-x: auto;
   scroll-behavior: smooth;
 }
+
 .review-container::-webkit-scrollbar {
   display: none;
 }
