--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -5,20 +5,15 @@ main {
 .hero {
   width: 100%;
   min-height: 200px;
-  /* height: 60vh; */
+  height: 550px;
   padding: 0 3rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: .5fr 1fr;
-  align-items: center;
-  justify-items: center;
+  position: relative;
 }
 
 .hero > .hero-title {
-  grid-area: 1/1/2/2;
-  width: 100%;
-  height: 100%;
-  position: relative;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .hero > .hero-title > h1,h2,h3 {
@@ -27,38 +22,46 @@ main {
 
 .hero > .hero-title > .title {
   position: relative;
-  top: 20%;
-  left: 30%;
+  top: 26%;
+  left: 20%;
 }
 
 .hero > .hero-title > h2 {
   position: relative;
-  top: 10%;
+  top: 20%;
   left: 4%;
   font-family: var(--font-lato);
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .hero > .hero-title > h3 {
   position: relative;
-  top: 28%;
-  left: 30%;
+  top: 30%;
+  left: 20%;
   font-family: var(--font-lato);
   font-weight: 400;
   font-size: 1.2rem;
 }
 
 .hero>.hero-description {
-  grid-area: 2/1/3/2;
-  width: 90%;
-  justify-self: self-start;
-  position: relative;
-  left:4%;
+  width: 50%;
+  position: absolute;
+  top: 80%;
+  text-align: justify;
 }
 
 .hero>.hero-image {
-  grid-area: 1/2/3/3;
+  width: 360px;
+  height: 460px;
+  position: absolute;
+  left: 58%;
+  top: 5%;
+  z-index: -1;
+}
+.hero>.hero-image>img{
+  width: 100% ;
+  height: 100%;
 }
 
 .review-section {
