--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -8,6 +8,35 @@
 }
 
 h1 {
+  font-size: 3rem;
+  font-weight: 800;
+}
+
+h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+h4 {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+p {
+  font-size: 1rem;
+  font-family: var(--font-lato);
+  line-height: 1.4;
+  font-weight: 400;
+}
+.small-font {
+  font-size: 0.875rem;
+}
+
+h1 {
   font-family: var(--font-montserrat);
   font-weight: 700;
   font-size: 3.8rem;
@@ -57,5 +86,5 @@ body {
 
 .bold {
   font-weight: 900;
-  font-size:medium;
+  font-size: medium;
 }
