--- a/app/styles/cv-page.css
+++ b/app/styles/cv-page.css
@@ -19,6 +19,7 @@
 }
 
 .editor > .left-panel > textarea {
+  background-color: white;
   width: 100%;
   height: 300px;
   padding: 15px;
@@ -48,6 +49,12 @@
   border: solid 1px var(--dark);
   border-radius: 25px;
   overflow-y: auto;
+}
+
+.editor > .right-panel > div > pre {
+  white-space: pre-wrap;
+  word-break: break-word;
+  font-family: "Calibri", sans-serif;
 }
 
 @media (width <= 1024px) {
