--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -1,11 +1,13 @@
 header {
-  height: 5rem;
-  margin: 0rem 2rem;
-  padding: 1rem;
-  display: flex;
-  gap: 4rem;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
+  gap: 4rem;
+  height: 5rem;
+  /* margin: 0 2rem; */
+  padding: 1rem 2rem;
+  display: flex;
+  box-shadow: 0 5px 15px -15px #000;
+  z-index: 1;
 }
 
 header h2 {
