--- a/app/styles/cv-page.css
+++ b/app/styles/cv-page.css
@@ -18,7 +18,11 @@
   box-shadow: 0px 0px 4px 1px #00000026;
 }
 
-.editor > .left-panel > textarea {
+.input-group{
+  
+}
+
+/* .editor > .left-panel > textarea {
   background-color: white;
   width: 100%;
   height: 300px;
@@ -33,7 +37,7 @@
 
 .editor > .left-panel > label > input {
   width: 100%;
-}
+} */
 
 .editor > .left-panel > div {
   margin-top: 10px;
