--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,3 +1,4 @@
+/* HERO SECTION */
 .hero-title {
   flex: 1 1 45%;
 }
@@ -28,18 +29,37 @@
   box-shadow: 0 4px 20px -6px rgba(0, 0, 0, 0.3);
 }
 
+/* ABOUT SECTION */
+.about-section {
+  background-color: #ffffff;
+  padding: 4rem 6rem;
+}
+
+/* REVIEW SECTION */
 .review-section {
   background: #fff8f0;
-  padding: 4rem 2rem;
+  padding: 4rem 6rem;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.review-section > h2 {
+  flex: 1 0 100%;
+  text-align: center;
 }
 
 .review-container {
-  display: flex;
-  gap: 1.5rem;
-  overflow-x: auto;
   scroll-snap-type: x mandatory;
+  gap: 1.5rem;
+  display: flex;
+  overflow-x: scroll;
+  justify-content: space-evenly;
+  flex: 1;
 }
 
 .review-container::-webkit-scrollbar {
@@ -47,7 +67,7 @@
 }
 
 .review-card {
-  flex: 0 0 320px;
+  flex: 0 0 400px;
   background: white;
   border-radius: 15px;
   box-shadow: 0 4px 12px -4px rgba(0, 0, 0, 0.2);
@@ -55,8 +75,50 @@
   scroll-snap-align: start;
 }
 
+/* Arrow Buttons */
+.arrow-btn-container {
+  width: 45px;
+  height: 45px;
+  box-shadow: 0 0 10px -6px var(--dark);
+  cursor: pointer;
+  z-index: 2;
+  background: #fff;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s;
+  display: flex;
+}
+
+/* Left and right positioning (customize as needed) */
+.arrow-left {
+  left: 1rem;
+}
+
+.arrow-right {
+  right: 1rem;
+}
+
+.arrow-btn {
+  font-size: 1.5rem;
+  color: var(--secondary);
+  opacity: 0.6;
+  transition: color 0.2s ease, opacity 0.2s ease;
+}
+
+.arrow-btn-container:hover .arrow-btn {
+  color: var(--dark);
+  opacity: 1;
+}
+
+.arrow-btn-container:active .arrow-btn {
+  color: var(--secondary);
+  transform: scale(0.95);
+}
+
+/* FEATURE SECTION */
 .feature-section {
-  padding: 6rem 5%;
+  padding: 4rem 6rem;
   background: linear-gradient(to bottom, #fff, #fff8f0);
   text-align: center;
 }
@@ -69,7 +131,6 @@
   align-items: start;
   gap: 10px;
   width: 100%;
-  height: 550px;
   margin: 20px 0;
   display: grid;
   grid-template-columns: 1fr 0.6fr;
@@ -135,5 +196,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .review-section {
+    height: 460px;
+    align-items: stretch;
+  }
+  .review-container {
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+    overflow-y: scroll;
+  }
+
+  .review-card {
+    flex: 1;
+  }
+
+  .arrow-btn-container {
+    display: none;
   }
 }
