--- a/components/layout/header.css
+++ b/components/layout/header.css
@@ -1,11 +1,11 @@
 header {
+  width: 100%;
+  height: 5rem;
+  padding: 1rem 2rem;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 4rem;
-  height: 5rem;
-  /* margin: 0 2rem; */
-  padding: 1rem 2rem;
-  display: flex;
   box-shadow: 0 5px 15px -15px #000;
   z-index: 1;
 }
@@ -46,4 +46,15 @@ header > nav ul > li {
   text-transform: uppercase;
   letter-spacing: -0.06rem;
   word-spacing: 0.1rem;
+}
+
+.header-logo-container {
+  width: clamp(120px, 10vw, 200px);
+  padding: 0.5rem;
+  height: 4.5rem;
+}
+.header-logo {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
