--- a/components/layout/header.css
+++ b/components/layout/header.css
@@ -1,4 +1,5 @@
 header {
+  /* background-color: #0b1e3a; */
   width: 100%;
   height: 5rem;
   padding: 1rem 2rem;
@@ -6,7 +7,7 @@ header {
   justify-content: space-between;
   align-items: center;
   gap: 4rem;
-  box-shadow: 0 5px 15px -15px #000;
+  /* box-shadow: 0 5px 15px -15px #000; */
   z-index: 1;
 }
 
@@ -42,10 +43,15 @@ header > nav ul {
 }
 
 header > nav ul > li {
+  color: var(--text-light);
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: -0.06rem;
   word-spacing: 0.1rem;
+}
+
+header > nav ul > li:active {
+  color: var(--gold);
 }
 
 .header-logo-container {
