--- a/components/layout/header.css
+++ b/components/layout/header.css
@@ -1,35 +1,28 @@
 header {
-  /* background-color: #0b1e3a; */
   width: 100%;
-  height: 5rem;
-  padding: 1rem 2rem;
+  height: 10rem;
+  padding: 1rem 6rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   gap: 4rem;
-  /* box-shadow: 0 5px 15px -15px #000; */
   z-index: 1;
 }
 
-header h2 {
-  min-width: 30%;
+.header-logo-container {
+  flex: 0.5 50%;
+  width: 100%;
+  padding: 0.5rem;
   height: 100%;
-  display: flex;
-  font: 900 clamp(1.1rem, 1.2vw, 2.2rem) var(--font-montserrat-underline);
-  text-transform: uppercase;
-  letter-spacing: 0.3rem;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
 }
-
-header h2 > span {
-  padding-right: 0.5rem;
+.header-logo {
+  height: 100%;
+  object-fit: contain;
 }
 
 header > nav {
-  width: 70%;
-  height: 100%;
+  flex: 1 100%;
+  width: 100%;
 }
 
 header > nav ul {
@@ -37,14 +30,15 @@ header > nav ul {
   height: inherit;
   padding: 0 5%;
   display: flex;
-  gap: 2rem;
+  align-items: center;
   justify-content: flex-end;
+  gap: 2rem;
   font-weight: 500;
 }
 
 header > nav ul > li {
   color: var(--text-light);
-  font-weight: 900;
+  font-weight: 400;
   text-transform: uppercase;
   letter-spacing: -0.06rem;
   word-spacing: 0.1rem;
@@ -52,15 +46,4 @@ header > nav ul > li {
 
 header > nav ul > li:active {
   color: var(--gold);
-}
-
-.header-logo-container {
-  width: clamp(120px, 10vw, 200px);
-  padding: 0.5rem;
-  height: 4.5rem;
-}
-.header-logo {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
 }
