--- a/app/home.css
+++ b/app/home.css
@@ -77,8 +77,8 @@
 
 .reason-box {
   flex: 1;
-  background-color: var(--deep-navy-blue);
-  color: var(--text-light);
+  background-color: var(--cream);
+  color: var(--text-dark);
   min-width: 150px;
   padding: 1.5rem;
   border: 2px solid var(--subtle-grey);
@@ -98,8 +98,9 @@
 .reason-box:hover {
   flex: 2.5;
   background-color: var(--cream);
-  color: var(--text-dark);
+  color: var(--gold);
   border: 2px solid var(--gold);
+  text-shadow: 1px 1px var(--subtle-grey);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -108,6 +109,8 @@
 }
 .reason-box:hover p {
   display: block;
+  color: var(--text-dark);
+  text-shadow: ;
 }
 
 .reason-container:hover .reason-box:not(:hover) {
