--- a/components/layout/header.css
+++ b/components/layout/header.css
@@ -47,3 +47,6 @@ header > nav ul > li {
 header > nav ul > li:active {
   color: var(--gold);
 }
+header > nav ul > li:hover {
+  color: var(--gold);
+}
