--- a/app/home.css
+++ b/app/home.css
@@ -1,12 +1,69 @@
 /* HERO SECTION */
-.hero-title {
-  flex: 1 1 55%;
-  color: var(--text-light);
-  text-shadow: 1px 1px var(--subtle-grey);
+.hero {
+  padding: 6rem 6rem;
+  display: grid;
+  grid-template-columns: 1.2fr 1fr 1fr;
+  grid-template-rows: 1fr 0.5fr;
+  align-items: center;
+  justify-items: start;
+  gap: 2%;
 }
-.hero-title .title {
-  text-shadow: 1px 1px var(--deep-navy-blue);
+
+.hero-title {
+  color: var(--text-light);
+  grid-area: 1 / 1 / 2 / 3;
+  width: 100%;
+  height: 100%;
+  text-shadow: 2px 2px 0 var(--subtle-grey);
+  position: relative;
+  z-index: 1;
+}
+
+.hero-title > h2 {
+  width: fit-content;
+  position: relative;
+  top: 15%;
+  left: 6%;
+  font-size: 48px;
+}
+.hero-title > h2 span {
   color: var(--gold);
+}
+.hero-title > h3 {
+  width: fit-content;
+  position: relative;
+  top: 50%;
+  left: 6%;
+}
+.hero-title > h1 {
+  font-size: 58px;
+  width: fit-content;
+  position: relative;
+  top: 40%;
+  left: 23%;
+  color: var(--gold);
+  text-shadow: 3px 3px 0 var(--subtle-grey);
+}
+.hero-title > label {
+  width: 150px;
+  display: block;
+  position: relative;
+  top: 18%;
+  left: 58%;
+  font-size: 48px;
+}
+.hero-title > label input {
+  color: var(--gold);
+  width: inherit;
+  animation: blink 1.5s step-start infinite;
+}
+.hero-title > label input:focus {
+  animation: none;
+}
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
 }
 
 .hero-title h1,
@@ -16,18 +73,25 @@
 }
 
 .hero-description {
-  flex: 1 1 100%;
+  grid-area: 2 /1 / 3 / 2;
+  width: 100%;
   margin-top: 30px;
   text-align: justify;
-  color: #4a5565;
+  z-index: 1;
+  position: relative;
+  left: 12%;
 }
 .hero-description p {
-  width: 50%;
+  width: 90%;
   color: var(--text-light);
+  text-shadow: 1.5px 1px 0 var(--subtle-grey);
+}
+.hero-description p span {
+  text-shadow: 2px 2px 0 var(--subtle-grey);
 }
 
 .hero-video {
-  flex: 1 1 35%;
+  grid-area: 1 / 2 / 3 / 4;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,6 +113,7 @@
   top: 0;
   left: 0;
   justify-self: start;
+  z-index: 1;
 }
 
 .hero-video svg:nth-child(2) {
