--- a/components/layout/footer.css
+++ b/components/layout/footer.css
@@ -2,7 +2,7 @@ footer {
   background-color: var(--cream);
   margin: 1rem 0rem 0rem 0rem;
   padding: 2rem 0 2rem 0;
-  border: solid var(--deep-navy-blue);
+  border: solid var(--navy-blue);
   border-width: 2px 0px 0px 0px;
   display: flex;
   flex-direction: column;
