--- a/components/layout/header.css
+++ b/components/layout/header.css
@@ -38,15 +38,17 @@ header > nav ul {
 
 header > nav ul > li {
   color: var(--text-light);
-  font-weight: 400;
+  font-weight: 500;
   text-transform: uppercase;
   letter-spacing: -0.06rem;
   word-spacing: 0.1rem;
 }
 
 header > nav ul > li:active {
-  color: var(--gold);
+  color: var(--deep-navy);
 }
 header > nav ul > li:hover {
   color: var(--gold);
+  text-shadow: 2px 2px 0 var(--subtle-grey);
+  font-weight: 700;
 }
