--- a/app/home.css
+++ b/app/home.css
@@ -1,6 +1,6 @@
 /* HERO SECTION */
 .hero {
-  padding: 6rem 6rem;
+  padding: 1rem 6rem;
   display: grid;
   grid-template-columns: 1.2fr 1fr 1fr;
   grid-template-rows: 1fr 0.5fr;
@@ -55,14 +55,28 @@
 .hero-title > label input {
   color: var(--gold);
   width: inherit;
-  animation: blink 1.5s step-start infinite;
+  animation: typingBlink 4s steps(20, end) infinite;
 }
+
 .hero-title > label input:focus {
   animation: none;
 }
-@keyframes blink {
-  50% {
+
+@keyframes typingBlink {
+  0% {
+    width: 0;
+  }
+  60% {
+    width: 100%;
+  }
+  80% {
+    opacity: 1;
+  }
+  90% {
     opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
@@ -92,6 +106,7 @@
 
 .hero-video {
   grid-area: 1 / 2 / 3 / 4;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,14 +125,14 @@
 .hero-video svg {
   margin: 5px;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 15px;
+  left: 15px;
   justify-self: start;
   z-index: 1;
 }
 
 .hero-video svg:nth-child(2) {
-  left: 30px;
+  left: 45px;
 }
 
 /* HOW IT WORKS SECTION */
