--- a/components/layout/header.css
+++ b/components/layout/header.css
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  height: 10rem;
+  height: 150px;
   padding: 1rem 6rem;
   display: flex;
   justify-content: space-around;
